# Program-liczacy-pola-i-powierzchnie

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  README.md  config.h  configure  configure.ac  libtool
lib/: Makefile.am  Makefile.in
lib/.libs/: libobjetosc.lai  libpole.lai
src/: Makefile.am  Makefile.in  main.c  objetosc.c  pole.c
