AC_INIT([zad2], [0.2], [michael1099@o2.pl])

AC_PREREQ([2.69])

AC_CONFIG_SRCDIR([src/main.c])

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11.6 subdir-objects -Wall -Werror])
AC_CONFIG_FILES([Makefile lib/Makefile src/Makefile])

LT_INIT

AC_PROG_CC
AM_PROG_CC_C_O

AC_OUTPUT
